--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -460,7 +460,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kirby</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Mach Tornado<br/>Side: Drill Rush<br/>Up: Shuttle Loop<br/>Down: Dimensional Cape<br/>Final Smash: Galaxia Darkness</td>
       </tr>
       <tr>
         <td>28</td>
@@ -474,7 +474,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kid Icarus</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Palutena's Arrow (<i>Brawl</i>); Palutena Bow (3DS/Wii U)<br/>Side: Angel Ring (<i>Brawl</i>); Upperdash Arm (3DS/Wii U onward)<br/>Up: Wings of Icarus (<i>Brawl</i>); Power of Flight (3DS/Wii U onward)<br/>Down: Mirror Shield (<i>Brawl</i>); Guardian Orbitars (3DS/Wii U onward)<br/>Final Smash: Palutena's Army (<i>Brawl</i>); Three Sacred Treasures (3DS/Wii U); Lightning Chariot (<i>Ultimate</i>)</td>
       </tr>
       <tr>
         <td>28ε</td>
