--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -488,7 +488,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Kid Icarus</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Silver Bow<br/>Side: Electroshock Arm<br/>Up: Power of Flight<br/>Down: Guardian Orbitars<br/>Final Smash: Dark Pit Staff</td>
       </tr>
       <tr>
         <td>29</td>
@@ -502,7 +502,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Metroid</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Paralyzer<br/>Side: Plasma Whip<br/>Up: Plasma Wire (<i>Brawl</i>); Boost Kick (3DS/Wii U onward)<br/>Down: Flip Jump<br/>Final Smash: Power Suit Samus (<i>Brawl</i>); Gunship (3DS/Wii U)</td>
       </tr>
       <tr>
         <td>30</td>
@@ -516,7 +516,7 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Wario</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Chomp<br/>Side: Wario Bike<br/>Up: Corkscrew<br/>Down: Wario Waft<br/>Final Smash: Wario-Man</td>
       </tr>
       <tr>
         <td>31</td>
@@ -530,7 +530,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Metal Gear</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Hand Grenade<br/>Side: Remote Controlled Missle<br/>Up: Cypher<br/>Down: C4<br/>Final Smash: Grenade Launcher</td>
       </tr>
       <tr>
         <td>32</td>
@@ -544,7 +544,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Eruption<br/>Side: Quick Draw<br/>Up: Aether<br/>Down: Counter<br/>Final Smash: Great Aether</td>
       </tr>
       <tr>
         <td>33/34/35</td>
@@ -558,7 +558,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Down: Pokémon Change<br/>Final Smash: Triple Finish</td>
       </tr>
       <tr>
         <td>33</td>
@@ -572,7 +572,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Water Gun<br/>Side: Withdraw<br/>Up: Waterfall<br/>Down: Pokémon Change</td>
       </tr>
       <tr>
         <td>34</td>
@@ -586,7 +586,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Bullet Seed<br/>Side: Razor Leaf<br/>Up: Vine Whip<br/>Down: Pokémon Change</td>
       </tr>
       <tr>
         <td>35</td>
@@ -600,7 +600,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Flamethrower<br/>Side: Rock Smash (<i>Brawl</i>); Flare Blitz (3DS/Wii U onward)<br/>Up: Fly<br/>Down: Pokémon Change (<i>Brawl</i>, <i>Ultimate</i>); Rock Smash (3DS/Wii U)<br/>Final Smash: Triple Finish (<i>Brawl</i>, <i>Ultimate</i>); Mega Evolution (3DS/Wii U)</td>
       </tr>
       <tr>
         <td>36</td>
