--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -572,7 +572,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Water Gun<br/>Side: Withdraw<br/>Up: Waterfall<br/>Down: Pokémon Change</td>
+        <td>Standard: Water Gun<br/>Side: Withdraw<br/>Up: Waterfall<br/>Down: Pokémon Change<br/>Final Smash: Triple Finish</td>
       </tr>
       <tr>
         <td>34</td>
@@ -586,7 +586,7 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Bullet Seed<br/>Side: Razor Leaf<br/>Up: Vine Whip<br/>Down: Pokémon Change</td>
+        <td>Standard: Bullet Seed<br/>Side: Razor Leaf<br/>Up: Vine Whip<br/>Down: Pokémon Change<br/>Final Smash: Triple Finish</td>
       </tr>
       <tr>
         <td>35</td>
@@ -614,7 +614,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Donkey Kong</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Peanut Popgun<br/>Side: Monkey Flip<br/>Up: Rocketbarrel Boost<br/>Down: Banana Peel<br/>Final Smash: Rocketbarrel Barrage</td>
       </tr>
       <tr>
         <td>37</td>
@@ -628,7 +628,7 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Lucas</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: PK Freeze<br/>Side: PK Fire<br/>Up: PK Thunder<br/>Down: PSI Magnet<br/>Final Smash: PK Starstorm</td>
       </tr>
       <tr>
         <td>38</td>
@@ -642,7 +642,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Sonic</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Homing Attack<br/>Side: Spin Dash<br/>Up: Spring Jump<br/>Down: Spin Charge<br/>Final Smash: Super Sonic</td>
       </tr>
       <tr>
         <td>39</td>
@@ -656,7 +656,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kirby</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Inhale<br/>Side: Waddle Dee Throw (<i>Brawl</i>); Gordo Throw (3DS/Wii U)<br/>Up: Super Dedede Jump<br/>Down: Jet Hammer<br/>Final Smash: Waddle Dee Army (<i>Brawl</i>); Dedede Burst (3DS/Wii U)</td>
       </tr>
       <tr>
         <td>40</td>
@@ -670,7 +670,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pikmin</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Pikmin Pluck<br/>Side: Pikmin Throw<br/>Up: Pikmin Chain (<i>Brawl</i>); Winged Pikmin (3DS/Wii U onward)<br/>Down: Pikmin Order<br/>Final Smash: End of Day</td>
       </tr>
       <tr>
         <td>41</td>
