--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -684,7 +684,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td>Standard: Aura Sphere<br/>Side: Force Palm<br/>Up: Extreme Speed<br/>Down: Double Team<br/>Final Smash: Aura Storm (<i>Brawl</i>); Mega Evolution (3DS/Wii U)</td>
       </tr>
       <tr>
         <td>42</td>
