--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -8,6 +8,9 @@
       table, th, td {
         border: 1px solid #666666;
       }
+      td.notes {
+        line-height:1.5;
+      }
     </style>
     <title>Super Smash Bros. Character List</title>
   </head>
@@ -40,7 +43,7 @@
         <td>Default</td>
         <td>Default</td>
         <td>Mario</td>
-        <td>Standard: Fireball<br/>Side: Cape<br/>Up: Super Jump Punch<br/>Down: Mario Tornado (64, <i>Melee</i>); F.L.U.D.D. (<i>Brawl</i> onward)<br/>Final Smash: Mario Finale</td>
+        <td class="notes">Standard: Fireball<br/>Side: Cape<br/>Up: Super Jump Punch<br/>Down: Mario Tornado (64, <i>Melee</i>); F.L.U.D.D. (<i>Brawl</i> onward)<br/>Final Smash: Mario Finale</td>
       </tr>
       <tr>
         <td>2</td>
