--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -43,7 +43,13 @@
         <td>Default</td>
         <td>Default</td>
         <td>Mario</td>
-        <td class="notes">Standard: Fireball<br/>Side: Cape<br/>Up: Super Jump Punch<br/>Down: Mario Tornado (64, <i>Melee</i>); F.L.U.D.D. (<i>Brawl</i> onward)<br/>Final Smash: Mario Finale</td>
+        <td class="notes">
+          <b>Standard:</b> Fireball<br/>
+          <b>Side:</b> Cape<br/>
+          <b>Up:</b> Super Jump Punch<br/>
+          <b>Down:</b> Mario Tornado (64, <i>Melee</i>); F.L.U.D.D. (<i>Brawl</i> onward)<br/>
+          <b>Final Smash:</b> Mario Finale
+        </td>
       </tr>
       <tr>
         <td>2</td>
