--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -63,7 +63,13 @@
         <td>Default</td>
         <td>Default</td>
         <td>Donkey Kong</td>
-        <td>Standard: Giant Punch<br/>Side: Headbutt<br/>Up: Spinning Kong<br/>Down: Hand Slap<br/>Final Smash: Konga Beat (<i>Brawl</i>, 3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Giant Punch<br/>
+          <b>Side:</b> Headbutt<br/>
+          <b>Up:</b> Spinning Kong<br/>
+          <b>Down:</b> Hand Slap<br/>
+          <b>Final Smash:</b> Konga Beat (<i>Brawl</i>, 3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>3</td>
@@ -77,7 +83,13 @@
         <td>Default</td>
         <td>Default</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i> onward)<br/>Side: Boomerang (<i>Melee</i>); Gale Boomerang (<i>Brawl</i>, 3DS/Wii U)<br/>Up: Spin Attack<br/>Down: Bomb<br/>Final Smash: Triforce Slash (<i>Brawl</i>, 3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Boomerang (64); Bow (<i>Melee</i>); Hero's Bow (<i>Brawl</i> onward)<br/>
+          <b>Side:</b> Boomerang (<i>Melee</i>); Gale Boomerang (<i>Brawl</i>, 3DS/Wii U)<br/>
+          <b>Up:</b> Spin Attack<br/>
+          <b>Down:</b> Bomb<br/>
+          <b>Final Smash:</b> Triforce Slash (<i>Brawl</i>, 3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>4</td>
@@ -91,7 +103,13 @@
         <td>Default</td>
         <td>Default</td>
         <td>Metroid</td>
-        <td>Standard: Charge Shot<br/>Side: Missle<br/>Up: Screw Attack<br/>Down: Bomb<br/>Final Smash: Zero Laser</td>
+        <td class="notes">
+          <b>Standard:</b> Charge Shot<br/>
+          <b>Side:</b> Missle<br/>
+          <b>Up:</b> Screw Attack<br/>
+          <b>Down:</b> Bomb<br/>
+          <b>Final Smash:</b> Zero Laser
+        </td>
       </tr>
       <tr>
         <td>4ε</td>
@@ -105,7 +123,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Metroid</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>5</td>
@@ -119,7 +143,13 @@
         <td>Default</td>
         <td>Default</td>
         <td>Yoshi</td>
-        <td>Standard: Egg Lay<br/>Side: Egg Roll<br/>Up: Egg Throw<br/>Down: Yoshi Bomb<br/>Final Smash: Super Dragon</td>
+        <td class = "notes">
+          <b>Standard:</b> Egg Lay<br/>
+          <b>Side:</b> Egg Roll<br/>
+          <b>Up:</b> Egg Throw<br/>
+          <b>Down:</b> Yoshi Bomb<br/>
+          <b>Final Smash:</b> Super Dragon
+        </td>
       </tr>
       <tr>
         <td>6</td>
@@ -133,7 +163,13 @@
         <td>Default</td>
         <td>Default</td>
         <td>Kirby</td>
-        <td>Standard: Inhale<br/>Side: Hammer (<i>Melee</i>, <i>Brawl</i>); Hammer Flip (3DS/Wii U onward)<br/>Up: Final Cutter<br/>Down: Stone<br/>Final Smash: Cook Kirby (<i>Brawl</i>); Ultra Sword (3DS/Wii U onward)</td>
+        <td class="notes">
+          <b>Standard:</b> Inhale<br/>
+          <b>Side:</b> Hammer (<i>Melee</i>, <i>Brawl</i>); Hammer Flip (3DS/Wii U onward)<br/>
+          <b>Up:</b> Final Cutter<br/>
+          <b>Down:</b> Stone<br/>
+          <b>Final Smash:</b> Cook Kirby (<i>Brawl</i>); Ultra Sword (3DS/Wii U onward)
+        </td>
       </tr>
       <tr>
         <td>7</td>
@@ -147,7 +183,13 @@
         <td>Default</td>
         <td>Default</td>
         <td>Star Fox</td>
-        <td>Standard: Blaster<br/>Side: Fox Illusion<br/>Up: Fire Fox<br/>Down: Reflector<br/>Final Smash: Landmaster (<i>Brawl</i>, 3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Blaster<br/>
+          <b>Side:</b> Fox Illusion<br/>
+          <b>Up:</b> Fire Fox<br/>
+          <b>Down:</b> Reflector<br/>
+          <b>Final Smash:</b> Landmaster (<i>Brawl</i>, 3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>8</td>
@@ -161,7 +203,13 @@
         <td>Default</td>
         <td>Default</td>
         <td>Pokémon</td>
-        <td>Standard: Thunder Jolt<br/>Side: Skull Bash<br/>Up: Quick Attack<br/>Down: Thunder<br/>Final Smash: Volt Tackle</td>
+        <td class="notes">
+          <b>Standard:</b> Thunder Jolt<br/>
+          <b>Side:</b> Skull Bash<br/>
+          <b>Up:</b> Quick Attack<br/>
+          <b>Down:</b> Thunder<br/>
+          <b>Final Smash:</b> Volt Tackle
+        </td>
       </tr>
       <tr>
         <td>9</td>
