--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -223,7 +223,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
-        <td>Standard: Fireball<br/>Side: Green Missle<br/>Up: Super Jump Punch<br/>Down: Luigi Cyclone<br/>Final Smash: Negative Zone (<i>Brawl</i>); Poltergust 5000 (3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Fireball<br/>
+          <b>Side:</b> Green Missle<br/>
+          <b>Up:</b> Super Jump Punch<br/>
+          <b>Down:</b> Luigi Cyclone<br/>
+          <b>Final Smash:</b> Negative Zone (<i>Brawl</i>); Poltergust 5000 (3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>10</td>
@@ -237,7 +243,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>EarthBound</td>
-        <td>Standard: PK Fire (64); PK Flash (<i>Melee</i> onward)<br/>Side: PK Fire<br/>Up: PK Thunder<br/>Down: PSI Magnet<br/>Final Smash: PK Starstorm</td>
+        <td class="notes">
+          <b>Standard:</b> PK Fire (64); PK Flash (<i>Melee</i> onward)<br/>
+          <b>Side:</b> PK Fire<br/>
+          <b>Up:</b> PK Thunder<br/>
+          <b>Down:</b> PSI Magnet<br/>
+          <b>Final Smash:</b> PK Starstorm
+        </td>
       </tr>
       <tr>
         <td>11</td>
@@ -251,7 +263,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>F-Zero</td>
-        <td>Standard: Falcon Punch<br/>Side: Raptor Boost<br/>Up: Falcon Dive<br/>Down: Falcon Kick<br/>Final Smash: Blue Falcon</td>
+        <td class="notes">
+          <b>Standard:</b> Falcon Punch<br/>
+          <b>Side:</b> Raptor Boost<br/>
+          <b>Up:</b> Falcon Dive<br/>
+          <b>Down:</b> Falcon Kick<br/>
+          <b>Final Smash:</b> Blue Falcon
+        </td>
       </tr>
       <tr>
         <td>12</td>
@@ -265,7 +283,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Pound (64); Rollout (<i>Melee</i> onward)<br/>Side: Pound<br/>Up: Sing<br/>Down: Rest<br/>Final Smash: Puff Up</td>
+        <td class="notes">
+          <b>Standard:</b> Pound (64); Rollout (<i>Melee</i> onward)<br/>
+          <b>Side:</b> Pound<br/>
+          <b>Up:</b> Sing<br/>
+          <b>Down:</b> Rest<br/>
+          <b>Final Smash:</b> Puff Up
+        </td>
       </tr>
       <tr>
         <td>13</td>
@@ -279,7 +303,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
-        <td>Standard: Toad<br/>Side: Peach Bomber<br/>Up: Peach Parasol<br/>Down: Vegetable<br/>Final Smash: Peach Blossom</td>
+        <td class="notes">
+          <b>Standard:</b> Toad<br/>
+          <b>Side:</b> Peach Bomber<br/>
+          <b>Up:</b> Peach Parasol<br/>
+          <b>Down:</b> Vegetable<br/>
+          <b>Final Smash:</b> Peach Blossom
+        </td>
       </tr>
       <tr>
         <td>13ε</td>
@@ -293,7 +323,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Mario</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>14</td>
