--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -343,7 +343,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
-        <td>Standard: Fire Breath<br/>Side: Koopa Klaw (<i>Melee</i>); Flying Slam (<i>Brawl</i> onward)<br/>Up: Whirling Fortress<br/>Down: Bowser Bomb<br/>Final Smash: Giga Bowser</td>
+        <td class="notes">
+          <b>Standard:</b> Fire Breath<br/>
+          <b>Side:</b> Koopa Klaw (<i>Melee</i>); Flying Slam (<i>Brawl</i> onward)<br/>
+          <b>Up:</b> Whirling Fortress<br/>
+          <b>Down:</b> Bowser Bomb<br/>
+          <b>Final Smash:</b> Giga Bowser
+        </td>
       </tr>
       <tr>
         <td>15</td>
@@ -357,7 +363,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Ice Climber</td>
-        <td>Standard: Ice Shot<br/>Side: Squall Hammer<br/>Up: Belay<br/>Down: Blizzard<br/>Final Smash: Iceberg</td>
+        <td class="notes">
+          <b>Standard:</b> Ice Shot<br/>
+          <b>Side:</b> Squall Hammer<br/>
+          <b>Up:</b> Belay<br/>
+          <b>Down:</b> Blizzard<br/>
+          <b>Final Smash:</b> Iceberg
+        </td>
       </tr>
       <tr>
         <td>16</td>
@@ -371,7 +383,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: Needle Storm<br/>Side: Chain (<i>Melee</i>, <i>Brawl</i>); Burst Grenade (3DS/Wii U)<br/>Up: Vanish<br/>Down: Transform (<i>Melee</i>, <i>Brawl</i>); Bouncing Fish (3DS/Wii U)<br/>Final Smash: Light Arrow(<i>Brawl</i>, 3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Needle Storm<br/>
+          <b>Side:</b> Chain (<i>Melee</i>, <i>Brawl</i>); Burst Grenade (3DS/Wii U)<br/>
+          <b>Up:</b> Vanish<br/>
+          <b>Down:</b> Transform (<i>Melee</i>, <i>Brawl</i>); Bouncing Fish (3DS/Wii U)<br/>
+          <b>Final Smash:</b> Light Arrow(<i>Brawl</i>, 3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>17</td>
@@ -385,7 +403,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: Nayru's Love<br/>Side: Din's Fire<br/>Up: Farore's Wind<br/>Down: Transform (<i>Melee</i>, <i>Brawl</i>); Phantom Slash (3DS/Wii U onward)<br/>Final Smash: Light Arrow (<i>Brawl</i>, 3DS/Wii U); Triforce of Wisdom (<i>Ultimate</i>)</td>
+        <td class="notes">
+          <b>Standard:</b> Nayru's Love<br/>
+          <b>Side:</b> Din's Fire<br/>
+          <b>Up:</b> Farore's Wind<br/>
+          <b>Down:</b> Transform (<i>Melee</i>, <i>Brawl</i>); Phantom Slash (3DS/Wii U onward)<br/>
+          <b>Final Smash:</b> Light Arrow (<i>Brawl</i>, 3DS/Wii U); Triforce of Wisdom (<i>Ultimate</i>)
+        </td>
       </tr>
       <tr>
         <td>18</td>
@@ -399,7 +423,13 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Mario</td>
-        <td>Standard: Megavitamins<br/>Side: Super Sheet<br/>Up: Super Jump Punch<br/>Down: Dr. Tornado<br/>Final Smash: Doctor Finale</td>
+        <td class="notes">
+          <b>Standard:</b> Megavitamins<br/>
+          <b>Side:</b> Super Sheet<br/>
+          <b>Up:</b> Super Jump Punch<br/>
+          <b>Down:</b> Dr. Tornado<br/>
+          <b>Final Smash:</b> Doctor Finale
+        </td>
       </tr>
       <tr>
         <td>19</td>
@@ -413,7 +443,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Thunder Jolt<br/>Side: Skull Bash<br/>Up: Agility<br/>Down: Thunder<br/>Final Smash: </td>
+        <td class="notes">
+          <b>Standard:</b> Thunder Jolt<br/>
+          <b>Side:</b> Skull Bash<br/>
+          <b>Up:</b> Agility<br/>
+          <b>Down:</b> Thunder<br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>20</td>
@@ -427,7 +463,13 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Star Fox</td>
-        <td>Standard: Blaster<br/>Side: Falco Phantasm<br/>Up: Fire Bird<br/>Down: Reflector<br/>Final Smash: Landmaster (<i>Brawl</i>, 3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Blaster<br/>
+          <b>Side:</b> Falco Phantasm<br/>
+          <b>Up:</b> Fire Bird<br/>
+          <b>Down:</b> Reflector<br/>
+          <b>Final Smash:</b> Landmaster (<i>Brawl</i>, 3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>21</td>
@@ -441,7 +483,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: Sheild Breaker<br/>Side: Dancing Blade<br/>Up: Doplin Slash<br/>Down: Counter<br/>Final Smash: Critical Hit</td>
+        <td class="notes">Standard: Sheild Breaker<br/>Side: Dancing Blade<br/>Up: Doplin Slash<br/>Down: Counter<br/>Final Smash: Critical Hit</td>
       </tr>
       <tr>
         <td>21ε</td>
