--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -483,7 +483,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td class="notes">Standard: Sheild Breaker<br/>Side: Dancing Blade<br/>Up: Doplin Slash<br/>Down: Counter<br/>Final Smash: Critical Hit</td>
+        <td class="notes">
+          <b>Standard:</b> Sheild Breaker<br/>
+          <b>Side:</b> Dancing Blade<br/>
+          <b>Up:</b> Doplin Slash<br/>
+          <b>Down:</b> Counter<br/>
+          <b>Final Smash:</b> Critical Hit
+        </td>
       </tr>
       <tr>
         <td>21ε</td>
