--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -503,7 +503,13 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: Sheild Breaker<br/>Side: Dancing Blade<br/>Up: Doplin Slash<br/>Down: Counter<br/>Final Smash: Critical Hit</td>
+        <td class="notes">
+          <b>Standard:</b> Sheild Breaker<br/>
+          <b>Side:</b> Dancing Blade<br/>
+          <b>Up:</b> Doplin Slash<br/>
+          <b>Down:</b> Counter<br/>
+          <b>Final Smash:</b> Critical Hit
+        </td>
       </tr>
       <tr>
         <td>22</td>
@@ -517,7 +523,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: Fire Bow<br/>Side: Boomerang<br/>Up: Spin Attack<br/>Down: Bomb<br/>Final Smash: </td>
+        <td class="notes">
+          <b>Standard:</b> Fire Bow<br/>
+          <b>Side:</b> Boomerang<br/>
+          <b>Up:</b> Spin Attack<br/>
+          <b>Down:</b> Bomb<br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>23</td>
@@ -531,7 +543,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: Warlock Punch<br/>Side: Gerudo Dragon (<i>Melee</i>); Flame Choke (<i>Brawl</i> onward)<br/>Up: Dark Dive<br/>Down: Wozard's Foot<br/>Final Smash: Beast Ganon (<i>Brawl</i>, 3DS/Wii U); Demon King Ganon (<i>Ultimate</i>)</td>
+        <td class="notes">
+          <b>Standard:</b> Warlock Punch<br/>
+          <b>Side:</b> Gerudo Dragon (<i>Melee</i>); Flame Choke (<i>Brawl</i> onward)<br/>
+          <b>Up:</b> Dark Dive<br/>
+          <b>Down:</b> Wozard's Foot<br/>
+          <b>Final Smash:</b> Beast Ganon (<i>Brawl</i>, 3DS/Wii U); Demon King Ganon (<i>Ultimate</i>)
+        </td>
       </tr>
       <tr>
         <td>24</td>
@@ -545,7 +563,13 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Shadow Ball<br/>Side: Confusion<br/>Up: Teleport<br/>Down: Disable<br/>Final Smash: Psystrike</td>
+        <td class="notes">
+          <b>Standard:</b> Shadow Ball<br/>
+          <b>Side:</b> Confusion<br/>
+          <b>Up:</b> Teleport<br/>
+          <b>Down:</b> Disable<br/>
+          <b>Final Smash:</b> Psystrike
+        </td>
       </tr>
       <tr>
         <td>25</td>
@@ -559,7 +583,13 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: Flare Blade<br/>Side: Double-Edge Dance<br/>Up: Blazer<br/>Down: Counter<br/>Final Smash: Critical Hit</td>
+        <td class="notes">
+          <b>Standard:</b> Flare Blade<br/>
+          <b>Side:</b> Double-Edge Dance<br/>
+          <b>Up:</b> Blazer<br/>
+          <b>Down:</b> Counter<br/>
+          <b>Final Smash:</b> Critical Hit
+        </td>
       </tr>
       <tr>
         <td>25ε</td>
@@ -573,7 +603,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>26</td>
@@ -587,7 +623,13 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Game & Watch</td>
-        <td>Standard: Chef<br/>Side: Judge<br/>Up: Fire<br/>Down: Oil Panic<br/>Final Smash: Octopus</td>
+        <td class="notes">
+          <b>Standard:</b> Chef<br/>
+          <b>Side:</b> Judge<br/>
+          <b>Up:</b> Fire<br/>
+          <b>Down:</b> Oil Panic<br/>
+          <b>Final Smash:</b> Octopus
+        </td>
       </tr>
       <tr>
         <td>27</td>
