--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -643,7 +643,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kirby</td>
-        <td>Standard: Mach Tornado<br/>Side: Drill Rush<br/>Up: Shuttle Loop<br/>Down: Dimensional Cape<br/>Final Smash: Galaxia Darkness</td>
+        <td class="notes">
+          <b>Standard:</b> Mach Tornado<br/>
+          <b>Side:</b> Drill Rush<br/>
+          <b>Up:</b> Shuttle Loop<br/>
+          <b>Down:</b> Dimensional Cape<br/>
+          <b>Final Smash:</b> Galaxia Darkness
+        </td>
       </tr>
       <tr>
         <td>28</td>
@@ -657,7 +663,12 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kid Icarus</td>
-        <td>Standard: Palutena's Arrow (<i>Brawl</i>); Palutena Bow (3DS/Wii U)<br/>Side: Angel Ring (<i>Brawl</i>); Upperdash Arm (3DS/Wii U onward)<br/>Up: Wings of Icarus (<i>Brawl</i>); Power of Flight (3DS/Wii U onward)<br/>Down: Mirror Shield (<i>Brawl</i>); Guardian Orbitars (3DS/Wii U onward)<br/>Final Smash: Palutena's Army (<i>Brawl</i>); Three Sacred Treasures (3DS/Wii U); Lightning Chariot (<i>Ultimate</i>)</td>
+        <td class="notes">
+          <b>Standard:</b> Palutena's Arrow (<i>Brawl</i>); Palutena Bow (3DS/Wii U)<br/>
+          <b>Side:</b> Angel Ring (<i>Brawl</i>); Upperdash Arm (3DS/Wii U onward)<br/>
+          <b>Up:</b> Wings of Icarus (<i>Brawl</i>); Power of Flight (3DS/Wii U onward)<br/>
+          <b>Down:</b> Mirror Shield (<i>Brawl</i>); Guardian Orbitars (3DS/Wii U onward)<br/>
+          <b>Final Smash:</b> Palutena's Army (<i>Brawl</i>); Three Sacred Treasures (3DS/Wii U); Lightning Chariot (<i>Ultimate</i>)</td>
       </tr>
       <tr>
         <td>28ε</td>
@@ -671,7 +682,13 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Kid Icarus</td>
-        <td>Standard: Silver Bow<br/>Side: Electroshock Arm<br/>Up: Power of Flight<br/>Down: Guardian Orbitars<br/>Final Smash: Dark Pit Staff</td>
+        <td class="notes">
+          <b>Standard:</b> Silver Bow<br/>
+          <b>Side:</b> Electroshock Arm<br/>
+          <b>Up:</b> Power of Flight<br/>
+          <b>Down:</b> Guardian Orbitars<br/>
+          <b>Final Smash:</b> Dark Pit Staff
+        </td>
       </tr>
       <tr>
         <td>29</td>
