--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -702,7 +702,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Metroid</td>
-        <td>Standard: Paralyzer<br/>Side: Plasma Whip<br/>Up: Plasma Wire (<i>Brawl</i>); Boost Kick (3DS/Wii U onward)<br/>Down: Flip Jump<br/>Final Smash: Power Suit Samus (<i>Brawl</i>); Gunship (3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Paralyzer<br/>
+          <b>Side:</b> Plasma Whip<br/>
+          <b>Up:</b> Plasma Wire (<i>Brawl</i>); Boost Kick (3DS/Wii U onward)<br/>
+          <b>Down:</b> Flip Jump<br/>
+          <b>Final Smash:</b> Power Suit Samus (<i>Brawl</i>); Gunship (3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>30</td>
@@ -716,7 +722,13 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Wario</td>
-        <td>Standard: Chomp<br/>Side: Wario Bike<br/>Up: Corkscrew<br/>Down: Wario Waft<br/>Final Smash: Wario-Man</td>
+        <td class="notes">
+          <b>Standard:</b> Chomp<br/>
+          <b>Side:</b> Wario Bike<br/>
+          <b>Up:</b> Corkscrew<br/>
+          <b>Down:</b> Wario Waft<br/>
+          <b>Final Smash:</b> Wario-Man
+        </td>
       </tr>
       <tr>
         <td>31</td>
@@ -730,7 +742,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Metal Gear</td>
-        <td>Standard: Hand Grenade<br/>Side: Remote Controlled Missle<br/>Up: Cypher<br/>Down: C4<br/>Final Smash: Grenade Launcher</td>
+        <td class="notes">
+          <b>Standard:</b> Hand Grenade<br/>
+          <b>Side:</b> Remote Controlled Missle<br/>
+          <b>Up:</b> Cypher<br/>
+          <b>Down:</b> C4<br/>
+          <b>Final Smash:</b> Grenade Launcher
+        </td>
       </tr>
       <tr>
         <td>32</td>
@@ -744,7 +762,7 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td>Standard: Eruption<br/>Side: Quick Draw<br/>Up: Aether<br/>Down: Counter<br/>Final Smash: Great Aether</td>
+        <td class="notes">Standard: Eruption<br/>Side: Quick Draw<br/>Up: Aether<br/>Down: Counter<br/>Final Smash: Great Aether</td>
       </tr>
       <tr>
         <td>33/34/35</td>
