--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -762,7 +762,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
-        <td class="notes">Standard: Eruption<br/>Side: Quick Draw<br/>Up: Aether<br/>Down: Counter<br/>Final Smash: Great Aether</td>
+        <td class="notes">
+          <b>Standard:</b> Eruption<br/>
+          <b>Side:</b> Quick Draw<br/>
+          <b>Up:</b> Aether<br/>
+          <b>Down:</b> Counter<br/>
+          <b>Final Smash:</b> Great Aether
+        </td>
       </tr>
       <tr>
         <td>33/34/35</td>
@@ -776,7 +782,10 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Down: Pokémon Change<br/>Final Smash: Triple Finish</td>
+        <td class="notes">
+          <b>Down:</b> Pokémon Change<br/>
+          <b>Final Smash:</b> Triple Finish
+        </td>
       </tr>
       <tr>
         <td>33</td>
@@ -790,7 +799,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Water Gun<br/>Side: Withdraw<br/>Up: Waterfall<br/>Down: Pokémon Change<br/>Final Smash: Triple Finish</td>
+        <td class="notes">
+          <b>Standard:</b> Water Gun<br/>
+          <b>Side:</b> Withdraw<br/>
+          <b>Up:</b> Waterfall<br/>
+          <b>Down:</b> Pokémon Change<br/>
+          <b>Final Smash:</b> Triple Finish
+        </td>
       </tr>
       <tr>
         <td>34</td>
@@ -804,7 +819,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Bullet Seed<br/>Side: Razor Leaf<br/>Up: Vine Whip<br/>Down: Pokémon Change<br/>Final Smash: Triple Finish</td>
+        <td class="notes">
+          <b>Standard:</b> Bullet Seed<br/>
+          <b>Side:</b> Razor Leaf<br/>
+          <b>Up:</b> Vine Whip<br/>
+          <b>Down:</b> Pokémon Change<br/>
+          <b>Final Smash:</b> Triple Finish
+        </td>
       </tr>
       <tr>
         <td>35</td>
@@ -818,7 +839,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Flamethrower<br/>Side: Rock Smash (<i>Brawl</i>); Flare Blitz (3DS/Wii U onward)<br/>Up: Fly<br/>Down: Pokémon Change (<i>Brawl</i>, <i>Ultimate</i>); Rock Smash (3DS/Wii U)<br/>Final Smash: Triple Finish (<i>Brawl</i>, <i>Ultimate</i>); Mega Evolution (3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Flamethrower<br/>
+          <b>Side:</b> Rock Smash (<i>Brawl</i>); Flare Blitz (3DS/Wii U onward)<br/>
+          <b>Up:</b> Fly<br/>
+          <b>Down:</b> Pokémon Change (<i>Brawl</i>, <i>Ultimate</i>); Rock Smash (3DS/Wii U)<br/>
+          <b>Final Smash:</b> Triple Finish (<i>Brawl</i>, <i>Ultimate</i>); Mega Evolution (3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>36</td>
@@ -832,7 +859,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Donkey Kong</td>
-        <td>Standard: Peanut Popgun<br/>Side: Monkey Flip<br/>Up: Rocketbarrel Boost<br/>Down: Banana Peel<br/>Final Smash: Rocketbarrel Barrage</td>
+        <td class="notes">
+          <b>Standard:</b> Peanut Popgun<br/>
+          <b>Side:</b> Monkey Flip<br/>
+          <b>Up:</b> Rocketbarrel Boost<br/>
+          <b>Down:</b> Banana Peel<br/>
+          <b>Final Smash:</b> Rocketbarrel Barrage
+        </td>
       </tr>
       <tr>
         <td>37</td>
@@ -846,7 +879,13 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Lucas</td>
-        <td>Standard: PK Freeze<br/>Side: PK Fire<br/>Up: PK Thunder<br/>Down: PSI Magnet<br/>Final Smash: PK Starstorm</td>
+        <td class="notes">
+          <b>Standard:</b> PK Freeze<br/>
+          <b>Side:</b> PK Fire<br/>
+          <b>Up:</b> PK Thunder<br/>
+          <b>Down:</b> PSI Magnet<br/>
+          <b>Final Smash:</b> PK Starstorm
+        </td>
       </tr>
       <tr>
         <td>38</td>
@@ -860,7 +899,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Sonic</td>
-        <td>Standard: Homing Attack<br/>Side: Spin Dash<br/>Up: Spring Jump<br/>Down: Spin Charge<br/>Final Smash: Super Sonic</td>
+        <td class="notes">
+          <b>Standard:</b> Homing Attack<br/>
+          <b>Side:</b> Spin Dash<br/>
+          <b>Up:</b> Spring Jump<br/>
+          <b>Down:</b> Spin Charge<br/>
+          <b>Final Smash:</b> Super Sonic
+        </td>
       </tr>
       <tr>
         <td>39</td>
@@ -874,7 +919,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kirby</td>
-        <td>Standard: Inhale<br/>Side: Waddle Dee Throw (<i>Brawl</i>); Gordo Throw (3DS/Wii U)<br/>Up: Super Dedede Jump<br/>Down: Jet Hammer<br/>Final Smash: Waddle Dee Army (<i>Brawl</i>); Dedede Burst (3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Inhale<br/>
+          <b>Side:</b> Waddle Dee Throw (<i>Brawl</i>); Gordo Throw (3DS/Wii U)<br/>
+          <b>Up:</b> Super Dedede Jump<br/>
+          <b>Down:</b> Jet Hammer<br/>
+          <b>Final Smash:</b> Waddle Dee Army (<i>Brawl</i>); Dedede Burst (3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>40</td>
@@ -888,7 +939,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pikmin</td>
-        <td>Standard: Pikmin Pluck<br/>Side: Pikmin Throw<br/>Up: Pikmin Chain (<i>Brawl</i>); Winged Pikmin (3DS/Wii U onward)<br/>Down: Pikmin Order<br/>Final Smash: End of Day</td>
+        <td class="notes">
+          <b>Standard:</b> Pikmin Pluck<br/>
+          <b>Side:</b> Pikmin Throw<br/>
+          <b>Up:</b> Pikmin Chain (<i>Brawl</i>); Winged Pikmin (3DS/Wii U onward)<br/>
+          <b>Down:</b> Pikmin Order<br/>
+          <b>Final Smash:</b> End of Day
+        </td>
       </tr>
       <tr>
         <td>41</td>
@@ -902,7 +959,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
-        <td>Standard: Aura Sphere<br/>Side: Force Palm<br/>Up: Extreme Speed<br/>Down: Double Team<br/>Final Smash: Aura Storm (<i>Brawl</i>); Mega Evolution (3DS/Wii U)</td>
+        <td class="notes">
+          <b>Standard:</b> Aura Sphere<br/>
+          <b>Side:</b> Force Palm<br/>
+          <b>Up:</b> Extreme Speed<br/>
+          <b>Down:</b> Double Team<br/>
+          <b>Final Smash:</b> Aura Storm (<i>Brawl</i>); Mega Evolution (3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>42</td>
@@ -916,7 +979,13 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>R.O.B.</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td class="notes">
+          <b>Standard:</b> Robo Beam<br/>
+          <b>Side:</b> Arm Rotor<br/>
+          <b>Up:</b> Robo Burner<br/>
+          <b>Down:</b> Gyro<br/>
+          <b>Final Smash:</b> Diffusion Beam (<i>Brawl</i>); Super Diffusion Beam (3DS/Wii U)
+        </td>
       </tr>
       <tr>
         <td>43</td>
@@ -930,7 +999,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>The Legend of Zelda</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td class="notes">
+          <b>Standard:</b> Hero's Bow<br/>
+          <b>Side:</b> Boomerang<br/>
+          <b>Up:</b> Spin Attack<br/>
+          <b>Down:</b> Bomb<br/>
+          <b>Final Smash:</b> Triforce Slash
+        </td>
       </tr>
       <tr>
         <td>44</td>
