--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1019,7 +1019,13 @@
         <td>N/A</td>
         <td>Unlockable</td>
         <td>Star Fox</td>
-        <td>Standard: <br/>Side: <br/>Up: <br/>Down: <br/>Final Smash: </td>
+        <td class="notes">
+          <b>Standard:</b> Blaster<br/>
+          <b>Side:</b> Wolf Flash<br/>
+          <b>Up:</b> Fire Wolf<br/>
+          <b>Down:</b> Reflector<br/>
+          <b>Final Smash:</b> Landmaster (<i>Brawl</i>)
+        </td>
       </tr>
       <tr>
         <td>45</td>
