--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1039,6 +1039,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Animal Crossing</td>
+        <td class="notes">
+          <b>Standard:</b> Pocket<br/>
+          <b>Side:</b> Lloid Rocket<br/>
+          <b>Up:</b> Balloon Trip<br/>
+          <b>Down:</b> Timber<br/>
+          <b>Final Smash:</b> Dream Home
+        </td>
       </tr>
       <tr>
         <td>46</td>
@@ -1052,6 +1059,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mega Man</td>
+        <td class="notes">
+          <b>Standard:</b> Metal Blade<br/>
+          <b>Side:</b> Crash Bomber<br/>
+          <b>Up:</b> Rush Coil<br/>
+          <b>Down:</b> Leaf Shield<br/>
+          <b>Final Smash:</b> Mega Legends
+        </td>
       </tr>
       <tr>
         <td>47</td>
