--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1079,6 +1079,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Wii Fit</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>48</td>
@@ -1092,6 +1099,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>49</td>
@@ -1105,6 +1119,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Punch-Out!!</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>50</td>
@@ -1118,6 +1139,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pokémon</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>51</td>
