--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1159,6 +1159,13 @@
         <td>Custom</td>
         <td>Unlockable</td>
         <td>Super Smash Bros.</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>52</td>
@@ -1172,6 +1179,13 @@
         <td>Custom</td>
         <td>Unlockable</td>
         <td>Super Smash Bros.</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>53</td>
@@ -1185,6 +1199,13 @@
         <td>Custom</td>
         <td>Unlockable</td>
         <td>Super Smash Bros</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>54</td>
@@ -1198,6 +1219,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Kid Icarus</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>55</td>
@@ -1211,6 +1239,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Pac-Man</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>56</td>
@@ -1224,6 +1259,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>57</td>
@@ -1237,6 +1279,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Xenoblade</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>58</td>
@@ -1250,6 +1299,13 @@
         <td>Default</td>
         <td>Unlockable</td>
         <td>Mario</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>59</td>
@@ -1263,6 +1319,13 @@
         <td>Unlockable</td>
         <td>Unlockable</td>
         <td>Duck Hunt</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>60</td>
@@ -1276,6 +1339,13 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Street Fighter</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>61</td>
@@ -1289,6 +1359,13 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Final Fantasy</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>62</td>
@@ -1302,6 +1379,13 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Fire Emblem</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>63</td>
@@ -1315,6 +1399,13 @@
         <td>Downloadable</td>
         <td>Unlockable</td>
         <td>Bayonetta</td>
+        <td class="notes">
+          <b>Standard:</b> <br/>
+          <b>Side:</b> <br/>
+          <b>Up:</b> <br/>
+          <b>Down:</b> <br/>
+          <b>Final Smash:</b> 
+        </td>
       </tr>
       <tr>
         <td>64</td>
